antlr_src/CardParser.py
# Generated from Card.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CardParser ( Parser ):

    grammarFileName = "Card.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "'['", "']'", 
                     "';'", "':'", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'ActionStack'", "'null'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'=='", "'!='", "'>='", "'>'", "'<='", "'<'", 
                     "'and'", "'or'", "'not'", "'='", "'.'", "'if'", "'else'", 
                     "'foreach'", "'repeat'", "'until'", "'break'", "'continue'", 
                     "'const'", "'new'", "'function'", "'return'", "'enum'", 
                     "'Combination'", "'Round'", "'End'", "'DisplayBoard'", 
                     "'Pick'", "'GetInt'", "'GetString'", "'Print'", "'Println'", 
                     "'To'", "'From'", "'Deal'", "'Draw'", "'Move'", "'Play'", 
                     "'Shuffle'", "'Peek'" ]

    symbolicNames = [ "<INVALID>", "OPEN_CB", "CLOSE_CB", "OPEN_PAR", "CLOSE_PAR", 
                      "OPEN_SB", "CLOSE_SB", "SEMICOLON", "COLON", "COMMA", 
                      "DATA_TYPE", "INT", "STRING", "ACTION_STACK", "NULL", 
                      "ADD_OP", "SUB_OP", "MULT_OP", "DIV_OP", "MOD_OP", 
                      "EQ_OP", "NEQ_OP", "GEQ_OP", "GT_OP", "LEQ_OP", "LT_OP", 
                      "AND_OP", "OR_OP", "NOT_OP", "ASSIGN_OP", "DOT_OP", 
                      "IF", "ELSE", "FOREACH", "REPEAT", "UNTIL", "BREAK", 
                      "CONTINUE", "CONST", "NEW", "FUNC", "RETURN", "ENUM", 
                      "COMBI", "ROUND", "END", "DISPBRD", "PICK", "GETINT", 
                      "GETSTR", "PRINT", "PRINTLN", "TO", "FROM", "DEAL", 
                      "DRAW", "MOVE", "PLAY", "SHUFFLE", "PEEK", "IDENTIFIER", 
                      "COMMENT", "WS" ]

    RULE_start_ = 0
    RULE_program = 1
    RULE_setup_block = 2
    RULE_setup_content = 3
    RULE_function_block = 4
    RULE_function_header = 5
    RULE_formal_params = 6
    RULE_enum_block = 7
    RULE_enum_header = 8
    RULE_enum_body = 9
    RULE_obj_defn = 10
    RULE_round_block = 11
    RULE_setup_code_block = 12
    RULE_func_code_block = 13
    RULE_func_loop_code_block = 14
    RULE_round_code_block = 15
    RULE_round_loop_code_block = 16
    RULE_loop_code_block = 17
    RULE_statement = 18
    RULE_setup_stmt = 19
    RULE_func_stmt = 20
    RULE_func_loop_stmt = 21
    RULE_round_stmt = 22
    RULE_round_loop_stmt = 23
    RULE_loop_stmt = 24
    RULE_declare_stmt = 25
    RULE_declare_body = 26
    RULE_declare_content = 27
    RULE_const_stmt = 28
    RULE_assign_body = 29
    RULE_assignee = 30
    RULE_entity = 31
    RULE_array_body = 32
    RULE_object_body = 33
    RULE_object_content = 34
    RULE_expression = 35
    RULE_operator1 = 36
    RULE_operator2 = 37
    RULE_operator3 = 38
    RULE_operator4 = 39
    RULE_if_stmt = 40
    RULE_if_header = 41
    RULE_foreach_stmt = 42
    RULE_foreach_header = 43
    RULE_repeat_stmt = 44
    RULE_repeat_header = 45
    RULE_loop_if_stmt = 46
    RULE_func_if_stmt = 47
    RULE_func_foreach_stmt = 48
    RULE_func_repeat_stmt = 49
    RULE_func_loop_if_stmt = 50
    RULE_round_if_stmt = 51
    RULE_round_foreach_stmt = 52
    RULE_round_repeat_stmt = 53
    RULE_round_loop_if_stmt = 54
    RULE_block_stmt = 55
    RULE_func_block_stmt = 56
    RULE_func_loop_block_stmt = 57
    RULE_round_block_stmt = 58
    RULE_round_loop_block_stmt = 59
    RULE_loop_block_stmt = 60
    RULE_break_stmt = 61
    RULE_continue_stmt = 62
    RULE_return_stmt = 63
    RULE_end_stmt = 64
    RULE_function_call = 65
    RULE_actual_params = 66
    RULE_pick_expr = 67
    RULE_getint_expr = 68
    RULE_getstr_expr = 69
    RULE_print_stmt = 70
    RULE_deal_stmt = 71
    RULE_draw_stmt = 72
    RULE_move_stmt = 73
    RULE_play_stmt = 74
    RULE_shuffle_stmt = 75
    RULE_peek_stmt = 76
    RULE_action_stack_expr = 77

    ruleNames =  [ "start_", "program", "setup_block", "setup_content", 
                   "function_block", "function_header", "formal_params", 
                   "enum_block", "enum_header", "enum_body", "obj_defn", 
                   "round_block", "setup_code_block", "func_code_block", 
                   "func_loop_code_block", "round_code_block", "round_loop_code_block", 
                   "loop_code_block", "statement", "setup_stmt", "func_stmt", 
                   "func_loop_stmt", "round_stmt", "round_loop_stmt", "loop_stmt", 
                   "declare_stmt", "declare_body", "declare_content", "const_stmt", 
                   "assign_body", "assignee", "entity", "array_body", "object_body", 
                   "object_content", "expression", "operator1", "operator2", 
                   "operator3", "operator4", "if_stmt", "if_header", "foreach_stmt", 
                   "foreach_header", "repeat_stmt", "repeat_header", "loop_if_stmt", 
                   "func_if_stmt", "func_foreach_stmt", "func_repeat_stmt", 
                   "func_loop_if_stmt", "round_if_stmt", "round_foreach_stmt", 
                   "round_repeat_stmt", "round_loop_if_stmt", "block_stmt", 
                   "func_block_stmt", "func_loop_block_stmt", "round_block_stmt", 
                   "round_loop_block_stmt", "loop_block_stmt", "break_stmt", 
                   "continue_stmt", "return_stmt", "end_stmt", "function_call", 
                   "actual_params", "pick_expr", "getint_expr", "getstr_expr", 
                   "print_stmt", "deal_stmt", "draw_stmt", "move_stmt", 
                   "play_stmt", "shuffle_stmt", "peek_stmt", "action_stack_expr" ]

    EOF = Token.EOF
    OPEN_CB=1
    CLOSE_CB=2
    OPEN_PAR=3
    CLOSE_PAR=4
    OPEN_SB=5
    CLOSE_SB=6
    SEMICOLON=7
    COLON=8
    COMMA=9
    DATA_TYPE=10
    INT=11
    STRING=12
    ACTION_STACK=13
    NULL=14
    ADD_OP=15
    SUB_OP=16
    MULT_OP=17
    DIV_OP=18
    MOD_OP=19
    EQ_OP=20
    NEQ_OP=21
    GEQ_OP=22
    GT_OP=23
    LEQ_OP=24
    LT_OP=25
    AND_OP=26
    OR_OP=27
    NOT_OP=28
    ASSIGN_OP=29
    DOT_OP=30
    IF=31
    ELSE=32
    FOREACH=33
    REPEAT=34
    UNTIL=35
    BREAK=36
    CONTINUE=37
    CONST=38
    NEW=39
    FUNC=40
    RETURN=41
    ENUM=42
    COMBI=43
    ROUND=44
    END=45
    DISPBRD=46
    PICK=47
    GETINT=48
    GETSTR=49
    PRINT=50
    PRINTLN=51
    TO=52
    FROM=53
    DEAL=54
    DRAW=55
    MOVE=56
    PLAY=57
    SHUFFLE=58
    PEEK=59
    IDENTIFIER=60
    COMMENT=61
    WS=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Start_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(CardParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(CardParser.EOF, 0)

        def getRuleIndex(self):
            return CardParser.RULE_start_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_" ):
                listener.enterStart_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_" ):
                listener.exitStart_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_" ):
                return visitor.visitStart_(self)
            else:
                return visitor.visitChildren(self)




    def start_(self):

        localctx = CardParser.Start_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.program()
            self.state = 157
            self.match(CardParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setup_block(self):
            return self.getTypedRuleContext(CardParser.Setup_blockContext,0)


        def round_block(self):
            return self.getTypedRuleContext(CardParser.Round_blockContext,0)


        def getRuleIndex(self):
            return CardParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CardParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.setup_block()
            self.state = 160
            self.round_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Setup_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setup_content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CardParser.Setup_contentContext)
            else:
                return self.getTypedRuleContext(CardParser.Setup_contentContext,i)


        def getRuleIndex(self):
            return CardParser.RULE_setup_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetup_block" ):
                listener.enterSetup_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetup_block" ):
                listener.exitSetup_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetup_block" ):
                return visitor.visitSetup_block(self)
            else:
                return visitor.visitChildren(self)




    def setup_block(self):

        localctx = CardParser.Setup_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_setup_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 162
                self.setup_content()
                self.state = 165 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2112123657114385416) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Setup_contentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def setup_stmt(self):
            return self.getTypedRuleContext(CardParser.Setup_stmtContext,0)


        def function_block(self):
            return self.getTypedRuleContext(CardParser.Function_blockContext,0)


        def enum_block(self):
            return self.getTypedRuleContext(CardParser.Enum_blockContext,0)


        def obj_defn(self):
            return self.getTypedRuleContext(CardParser.Obj_defnContext,0)


        def getRuleIndex(self):
            return CardParser.RULE_setup_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetup_content" ):
                listener.enterSetup_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetup_content" ):
                listener.exitSetup_content(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetup_content" ):
                return visitor.visitSetup_content(self)
            else:
                return visitor.visitChildren(self)




    def setup_content(self):

        localctx = CardParser.Setup_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_setup_content)
        try:
            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.setup_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.function_block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.enum_block()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 170
                self.obj_defn()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_header(self):
            return self.getTypedRuleContext(CardParser.Function_headerContext,0)


        def OPEN_CB(self):
            return self.getToken(CardParser.OPEN_CB, 0)

        def func_code_block(self):
            return self.getTypedRuleContext(CardParser.Func_code_blockContext,0)


        def CLOSE_CB(self):
            return self.getToken(CardParser.CLOSE_CB, 0)

        def getRuleIndex(self):
            return CardParser.RULE_function_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_block" ):
                listener.enterFunction_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_block" ):
                listener.exitFunction_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_block" ):
                return visitor.visitFunction_block(self)
            else:
                return visitor.visitChildren(self)




    def function_block(self):

        localctx = CardParser.Function_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.function_header()
            self.state = 174
            self.match(CardParser.OPEN_CB)
            self.state = 175
            self.func_code_block()
            self.state = 176
            self.match(CardParser.CLOSE_CB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(CardParser.FUNC, 0)

        def IDENTIFIER(self):
            return self.getToken(CardParser.IDENTIFIER, 0)

        def OPEN_PAR(self):
            return self.getToken(CardParser.OPEN_PAR, 0)

        def CLOSE_PAR(self):
            return self.getToken(CardParser.CLOSE_PAR, 0)

        def formal_params(self):
            return self.getTypedRuleContext(CardParser.Formal_paramsContext,0)


        def DISPBRD(self):
            return self.getToken(CardParser.DISPBRD, 0)

        def getRuleIndex(self):
            return CardParser.RULE_function_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_header" ):
                listener.enterFunction_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_header" ):
                listener.exitFunction_header(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_header" ):
                return visitor.visitFunction_header(self)
            else:
                return visitor.visitChildren(self)




    def function_header(self):

        localctx = CardParser.Function_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_header)
        self._la = 0 # Token type
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.match(CardParser.FUNC)
                self.state = 179
                self.match(CardParser.IDENTIFIER)
                self.state = 180
                self.match(CardParser.OPEN_PAR)
                self.state = 182
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 181
                    self.formal_params()


                self.state = 184
                self.match(CardParser.CLOSE_PAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.match(CardParser.FUNC)
                self.state = 186
                self.match(CardParser.DISPBRD)
                self.state = 187
                self.match(CardParser.OPEN_PAR)
                self.state = 188
                self.match(CardParser.CLOSE_PAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Formal_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(CardParser.DATA_TYPE)
            else:
                return self.getToken(CardParser.DATA_TYPE, i)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CardParser.IDENTIFIER)
            else:
                return self.getToken(CardParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CardParser.COMMA)
            else:
                return self.getToken(CardParser.COMMA, i)

        def getRuleIndex(self):
            return CardParser.RULE_formal_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal_params" ):
                listener.enterFormal_params(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal_params" ):
                listener.exitFormal_params(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal_params" ):
                return visitor.visitFormal_params(self)
            else:
                return visitor.visitChildren(self)




    def formal_params(self):

        localctx = CardParser.Formal_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_formal_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(CardParser.DATA_TYPE)
            self.state = 192
            self.match(CardParser.IDENTIFIER)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 193
                self.match(CardParser.COMMA)
                self.state = 194
                self.match(CardParser.DATA_TYPE)
                self.state = 195
                self.match(CardParser.IDENTIFIER)
                self.state = 200
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enum_header(self):
            return self.getTypedRuleContext(CardParser.Enum_headerContext,0)


        def OPEN_CB(self):
            return self.getToken(CardParser.OPEN_CB, 0)

        def enum_body(self):
            return self.getTypedRuleContext(CardParser.Enum_bodyContext,0)


        def CLOSE_CB(self):
            return self.getToken(CardParser.CLOSE_CB, 0)

        def getRuleIndex(self):
            return CardParser.RULE_enum_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_block" ):
                listener.enterEnum_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_block" ):
                listener.exitEnum_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_block" ):
                return visitor.visitEnum_block(self)
            else:
                return visitor.visitChildren(self)




    def enum_block(self):

        localctx = CardParser.Enum_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_enum_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.enum_header()
            self.state = 202
            self.match(CardParser.OPEN_CB)
            self.state = 203
            self.enum_body()
            self.state = 204
            self.match(CardParser.CLOSE_CB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENUM(self):
            return self.getToken(CardParser.ENUM, 0)

        def IDENTIFIER(self):
            return self.getToken(CardParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return CardParser.RULE_enum_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_header" ):
                listener.enterEnum_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_header" ):
                listener.exitEnum_header(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_header" ):
                return visitor.visitEnum_header(self)
            else:
                return visitor.visitChildren(self)




    def enum_header(self):

        localctx = CardParser.Enum_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_enum_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 206
            self.match(CardParser.ENUM)
            self.state = 207
            self.match(CardParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Enum_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(CardParser.IDENTIFIER)
            else:
                return self.getToken(CardParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(CardParser.COMMA)
            else:
                return self.getToken(CardParser.COMMA, i)

        def getRuleIndex(self):
            return CardParser.RULE_enum_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnum_body" ):
                listener.enterEnum_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnum_body" ):
                listener.exitEnum_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnum_body" ):
                return visitor.visitEnum_body(self)
            else:
                return visitor.visitChildren(self)




    def enum_body(self):
